Add a Win32 icon resource since Qt doesn't seem to be doing the right thing

--- a/win32/wesnoth-rcx.rc
+++ b/win32/wesnoth-rcx.rc
@@ -7,6 +7,17 @@
 #include <richedit.h>
 #include "resource.h"
 
+
+
+
+//
+// Icon resources
+//
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDI_ICON1          ICON           ".\\wesnoth-rcx.ico"
+
+
+
 //
 // Version Information resources
 //
