--- a/x11/wesnoth-rcx.desktop
+++ b/x11/wesnoth-rcx.desktop
@@ -6,4 +6,4 @@ GenericName=Image Recoloring Tool
 Comment=A Wesnoth graphics team-coloring/recoloring tool.
 Icon=wesnoth-rcx
 Exec=wesnoth-rcx
-Categories=Graphics;2DGraphics;RasterGraphics;Qt;
+Categories=Graphics;2DGraphics;RasterGraphics;Qt;X-KDE-More;
