--- a/win32/wesnoth-rcx.rc
+++ b/win32/wesnoth-rcx.rc
@@ -15,7 +15,7 @@
 // Icon resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDI_ICON1          ICON           ".\\wesnoth-rcx.ico"
+IDI_ICON1          ICON           "./wesnoth-rcx.ico"
 
 
 
@@ -57,4 +57,4 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 // Manifest resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-1                  RT_MANIFEST    ".\\manifest.xml"
+1                  RT_MANIFEST    "./manifest.xml"
