--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(wesnoth-rcx VERSION 0.4 LANGUAGES C CXX)
+project(wespal VERSION 0.4 LANGUAGES C CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOUIC ON)
@@ -20,7 +20,7 @@ target_link_libraries(xcfplugin PRIVATE
 	Qt::Gui
 )
 
-qt_add_executable(wesnoth-rcx WIN32 MACOSX_BUNDLE
+qt_add_executable(wespal WIN32 MACOSX_BUNDLE
 	src/appconfig.cpp src/appconfig.hpp
 	src/codesnippetdialog.cpp src/codesnippetdialog.hpp src/codesnippetdialog.ui
 	src/colorlistinputdialog.cpp src/colorlistinputdialog.hpp src/colorlistinputdialog.ui
@@ -38,20 +38,20 @@ qt_add_executable(wesnoth-rcx WIN32 MACOSX_BUNDLE
 	src/wesnothrc.cpp src/wesnothrc.hpp
 )
 
-qt_import_plugins(wesnoth-rcx INCLUDE XCFPlugin)
+qt_import_plugins(wespal INCLUDE XCFPlugin)
 
-target_compile_options(wesnoth-rcx PRIVATE
+target_compile_options(wespal PRIVATE
 	-Wall
 	-Wextra
 	-Werror=non-virtual-dtor
 	-Wold-style-cast
 )
 
-target_compile_definitions(wesnoth-rcx PRIVATE
+target_compile_definitions(wespal PRIVATE
 	QT_NO_FOREACH
 )
 
-target_link_libraries(wesnoth-rcx PRIVATE
+target_link_libraries(wespal PRIVATE
 	Qt::Core
 	Qt::Gui
 	Qt::Widgets
@@ -59,8 +59,8 @@ target_link_libraries(wesnoth-rcx PRIVATE
 )
 
 # Resources:
-set_source_files_properties("icons/128x128/wesnoth-rcx.png"
-	PROPERTIES QT_RESOURCE_ALIAS "wesnoth-rcx-icon-128.png"
+set_source_files_properties("icons/128x128/wespal.png"
+	PROPERTIES QT_RESOURCE_ALIAS "wespal-icon-128.png"
 )
 set_source_files_properties("icons/16x16/edit-copy.png"
 	PROPERTIES QT_RESOURCE_ALIAS "edit-copy-16.png"
@@ -77,37 +77,37 @@ set_source_files_properties("icons/16x16/zoom-in.png"
 set_source_files_properties("icons/16x16/zoom-out.png"
 	PROPERTIES QT_RESOURCE_ALIAS "zoom-out-16.png"
 )
-set_source_files_properties("icons/256x256/wesnoth-rcx.png"
-	PROPERTIES QT_RESOURCE_ALIAS "wesnoth-rcx-icon-256.png"
+set_source_files_properties("icons/256x256/wespal.png"
+	PROPERTIES QT_RESOURCE_ALIAS "wespal-icon-256.png"
 )
-set_source_files_properties("icons/64x64/wesnoth-rcx.png"
-	PROPERTIES QT_RESOURCE_ALIAS "wesnoth-rcx-icon-64.png"
+set_source_files_properties("icons/64x64/wespal.png"
+	PROPERTIES QT_RESOURCE_ALIAS "wespal-icon-64.png"
 )
 set(morningstar_resource_files
-	"icons/128x128/wesnoth-rcx.png"
+	"icons/128x128/wespal.png"
 	"icons/16x16/edit-copy.png"
 	"icons/16x16/list-add.png"
 	"icons/16x16/list-remove.png"
 	"icons/16x16/zoom-in.png"
 	"icons/16x16/zoom-out.png"
-	"icons/256x256/wesnoth-rcx.png"
-	"icons/64x64/wesnoth-rcx.png"
+	"icons/256x256/wespal.png"
+	"icons/64x64/wespal.png"
 )
 
-qt_add_resources(wesnoth-rcx "morningstar"
+qt_add_resources(wespal "morningstar"
 	PREFIX
 		"/"
 	FILES
 		${morningstar_resource_files}
 )
 
-install(TARGETS wesnoth-rcx
+install(TARGETS wespal
 	BUNDLE DESTINATION .
 	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 qt_generate_deploy_app_script(
-	TARGET wesnoth-rcx
+	TARGET wespal
 	FILENAME_VARIABLE deploy_script
 	NO_UNSUPPORTED_PLATFORM_ERROR
 )
