--- a/desktop/me.irydacea.Wespal.desktop
+++ b/desktop/me.irydacea.Wespal.desktop
@@ -2,8 +2,8 @@
 Version=1.0
 Type=Application
 Name=Wespal
-GenericName=Image Recoloring Tool
-Comment=A Wesnoth graphics team-coloring/recoloring tool.
+GenericName=Wesnoth Asset Recoloring Tool
+Comment=A Wesnoth graphical assets team-coloring/recoloring tool.
 Icon=wespal
 Exec=wespal
 Categories=Graphics;2DGraphics;RasterGraphics;Qt;X-KDE-More;
