cmake: Have tests use the 'offscreen' platform
Should fix the issue where CI tests on the ubuntu-latest GH Actions
runner fail with:

  qt.qpa.xcb: could not connect to display
  qt.qpa.plugin: Could not load the Qt platform plugin "xcb" in "" even though it was found.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,9 @@ if(ENABLE_TESTS)
 
     enable_testing()
 
-	add_test(NAME wespal_tests COMMAND wespal_tests)
+	add_test(NAME wespal_tests COMMAND
+		wespal_tests -platform offscreen
+	)
 endif()
 
 #
