ci: Build this branch

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "master", "ci-tests" ]
+    branches: [ "master", "ci-tests", "more-image-plugins" ]
   pull_request:
-    branches: [ "master", "ci-tests" ]
+    branches: [ "master", "ci-tests", "more-image-plugins" ]
 
 jobs:
   build:
