--- a/src/3rdparty/kimageformats/CMakeLists.txt
+++ b/src/3rdparty/kimageformats/CMakeLists.txt
@@ -40,6 +40,17 @@ kif_add_static_plugin(kimg_xcf CLASS_NAME XCFPlugin SOURCES
 )
 
 #
+# kimg_psd
+#
+
+kif_add_static_plugin(kimg_psd CLASS_NAME PSDPlugin SOURCES
+	fastmath_p.h
+	psd.cpp
+	psd_p.h
+	util_p.h
+)
+
+#
 # kimg_kra
 #
 
