--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -48,6 +48,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Set reusable strings
       id: strings
@@ -55,6 +57,8 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
         echo "build-install-dir=${{ github.workspace }}/build-install-prefix" >> "$GITHUB_OUTPUT"
+        [ "${{ matrix.cpp_compiler }}" = "cl" ] && echo "build-toolchain-opts=-DCMAKE_TOOLCHAIN_FILE=C:\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake" >> "$GITHUB_OUTPUT"
+        true
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
@@ -62,11 +66,21 @@ jobs:
       with:
         version: 6.4.3
         cache: true
+        modules: qt5compat
 
-    - name: Configure and build Wespal
+    - name: Prepare vcpkg (Windows only)
+      if: matrix.cpp_compiler == 'cl'
       run: |
-        cmake -B ${{ steps.strings.outputs.build-output-dir }} -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_INSTALL_PREFIX=${{ steps.strings.outputs.build-install-dir }} -DENABLE_TESTS=ON -S ${{ github.workspace }}
-        cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+        pushd C:\vcpkg
+        git fetch origin 8150939b69720adc475461978e07c2d2bf5fb76e
+        popd
+
+    - name: Configure Wespal
+      run: |
+        cmake -B ${{ steps.strings.outputs.build-output-dir }} ${{ steps.strings.outputs.build-toolchain-opts }} -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_INSTALL_PREFIX=${{ steps.strings.outputs.build-install-dir }} -DENABLE_BUILTIN_IMAGE_PLUGINS=ON -DENABLE_TESTS=ON ${{ steps.strings.outputs.cmake-extra-args }} -S ${{ github.workspace }}
+
+    - name: Build Wespal
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
     - name: Run unit tests
       run: ctest --test-dir ${{ steps.strings.outputs.build-output-dir }} --build-config ${{ matrix.build_type }} --output-on-failure
